# medium-skill-based-agents

./: .gitignore  MANIFEST.in  [Medium]Skilled_RL_Agents.ipynb  configs.yaml  convert_to_pt.py  create_dataset.py  main.py  pyproject.toml  requirements.txt  test_packages.py  test_train.py  test_vok.ipynb  test_vos.ipynb  train_agents.py  train_autoenc.py  train_usr.py  train_vok.py  train_vos.py
environment_configs/: BreakoutNoFrameskip-v4.yaml  MsPacmanNoFrameskip-v4.yaml  PongNoFrameskip-v4.yaml
skills/: __init__.py  autoencoder.py  skill_interface.py  unsupervised_state_representation.py  video_object_keypoints.py  video_object_segmentation.py
skills/torch_models/: nature-encoder-all-envs.pt  nature-encoder.pt  vid-obj-key (1).pt  vid-obj-key-all-envs.pt  vid-obj-key.pt
utils/: custom_ppo.py  feature_extractors.py  monitor_moe_weights.py  monitor_weights.py
